[package]
name = "mikrus-cli"
version = "0.1.0"
edition = "2021"
authors = ["firesz25 <olek.cz@outlook.com>"]
readme = "README.md"
keywords = ["cli", "mikrus"]
description = "cli client for mikr.us api"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Firesz25/mikrus-cli"
homepage = "https://github.com/Firesz25/mikrus-cli"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "mikrus"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.16", features = ["derive"] }
directories = "4.0.1"
reqwest = "0.11.11"
ron = "0.7.1"
serde = "1.0.140"
tokio = { version = "1.20.1", features = ["full"] }

[features]
